--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "main": "lib/index.js",
   "repository": "https://github.com/accessifywiki/accessifywiki-core.git",
   "scripts": {
-    "build": "tsc --lib es6,dom -outDir lib src/index.ts",
+    "build": "tsc --lib es6,dom -outDir lib src/index.ts src/server.ts",
+    "build:esm": "tsc --target es6 --lib dom -outDir esm src/accessifywiki.ts",
     "aria:process": "ts-node src/index.ts --aria-process",
+    "start": "node lib/server.js",
+    "start:orig": "live-server --port=9001 --no-browser",
     "test:validator": "ts-node src/index.ts --validator-test",
     "test": "jest --colors"
   },
@@ -17,6 +20,7 @@
     "@types/node": "^13.5.1",
     "ajv": "^6.11.0",
     "jest": "^25.1.0",
+    "live-server": "^1.2.1",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
